2010-03-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.m: Cleaned up CFAllocator and removed things 
	that should not have been there in the first place.
	* Source/CFString.m:
	* Source/CFDate.m:
	* Source/CFArray.m:
	* Source/CFPropertyList.m:
	* Source/CFString.m:
	* Source/CFNumber.m: Cleaned up
	* Headers/CoreFoundation/CFBase.h: Added and fixed defines and types.

2010-02-28 08:43-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/CoreFoundation/CFBase.h: Declare externs where appropriate.

2010-02-12 19:35-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/CFPropertyList.m: Use stream length instead of bufferLength.
	Correction for compilation error.

2010-01-26 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.m: Fill in a bit more code.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFNumber.h:
	* Source/GNUmakefile:
	* Source/CFNumber.m: Added initial CFNumber implementation.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFArray.h:
	* Headers/CoreFoundation/CFDictionary.h: Made immutable and mutable
	versions of these class be the same structure.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStream.m: Fixed typo.

2010-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFBase.h: Revert previous change, the correct
	place for CFSTR is in CFString.h.
	* Source/CFError.m: Include CFString.h.

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFString.h: Moved CFSTR definition from here...
	* Headers/CoreFoundation/CFBase.h: To here.
	* Source/CFError.m:
	* Source/CFString.m: Use CFSTR() instead of @"".

2010-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h:
	* Headers/CoreFoundation/CFBase.h
	* Headers/CoreFoundation/CFPropertyList.h:
	* Source/GNUmakefile: